# DeltaxBot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  compose.yaml  main.py  migrate.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py  errors.py  telegram_bot.py
app/database/: __init__.py  base.py  db.py  operator.py
app/database/storage/: __init__.py  base_storage.py  mongo_storage.py
app/filters/: __init__.py  admin.py
app/handlers/: spot_dl.py  start.py  tools.py
app/handlers/keyboard/: __init__.py  menu.py
app/helpers/: __init__.py  button.py  cdn_tools.py  user.py  websocket.py
app/helpers/spotify/: __init__.py  core.py  downloader.py
app/utils/: __init__.py  formater.py  http_request.py  logger.py
app/webhook/: __init__.py  server.py
delta/: __init__.py  config.py  logging.py
delta/core/: __init__.py  config.py  telegram_bot.py
delta/core/database/: __init__.py  database_provider.py  models.py  music_db.py  repository.py  system_db.py
delta/core/database/storage/: __init__.py  postgres_storage.py
delta/filters/: __init__.py  admin.py
delta/helpers/: progress.py
delta/plugins/: gemini_ai.py  spot_dl.py  start.py  system.py  tools.py
delta/utils/: __init__.py  formater.py  gemini.py  network.py
delta/utils/spotify/: __init__.py  core.py  downloader.py
examples/: button_advanved.py  buttons.py
