[project]
name = "delta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.13",
    "aiopath>=0.7.7",
    "aiorun>=2025.1.1",
    "asyncer>=0.0.8",
    "asyncpg>=0.30.0",
    "colorlog>=6.9.0",
    "gitpython>=3.1.44",
    "google-genai>=1.7.0",
    "meval>=2.5",
    "pillow>=11.1.0",
    "pyrotgfork>=2.2.9",
    "python-dotenv>=1.0.1",
    "spotdl",
    "sqlalchemy>=2.0.39",
    "tgcrypto>=1.2.5",
    "uvloop>=0.21.0",
]

[tool.uv.sources]
spotdl = { git = "https://github.com/Kyrluckechuck/spotify-downloader", rev = "fix-yt-dlp-memory-leak" }
